--- a/index.html
+++ b/index.html
@@ -140,6 +140,48 @@
                     <span class="button"></span>
                   </span>
                 </a>
+                <a href="" class="tile">
+                  <span class="img-container">
+                    <img src="images/1.png" alt="" />
+                    <span class="tile-title"></span>
+                    <span class="tile-text"
+                      >Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+                      sed do eiusmod tempor incididunt ut labore et dolore magna
+                      aliqua. Ut enim ad minim veniam, quis nostrud exercitation
+                      ullamco laboris nisi ut aliquip ex ea commodo
+                      consequat.</span
+                    >
+                    <span class="button"></span>
+                  </span>
+                </a>
+                <a href="" class="tile">
+                  <span class="img-container">
+                    <img src="images/1.png" alt="" />
+                    <span class="tile-title"></span>
+                    <span class="tile-text"
+                      >Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+                      sed do eiusmod tempor incididunt ut labore et dolore magna
+                      aliqua. Ut enim ad minim veniam, quis nostrud exercitation
+                      ullamco laboris nisi ut aliquip ex ea commodo
+                      consequat.</span
+                    >
+                    <span class="button"></span>
+                  </span>
+                </a>
+                <a href="" class="tile">
+                  <span class="img-container">
+                    <img src="images/1.png" alt="" />
+                    <span class="tile-title"></span>
+                    <span class="tile-text"
+                      >Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+                      sed do eiusmod tempor incididunt ut labore et dolore magna
+                      aliqua. Ut enim ad minim veniam, quis nostrud exercitation
+                      ullamco laboris nisi ut aliquip ex ea commodo
+                      consequat.</span
+                    >
+                    <span class="button"></span>
+                  </span>
+                </a>
               </div>
             </div>
           </div>
