--- a/index.html
+++ b/index.html
@@ -129,58 +129,58 @@
                 <a href="" class="tile">
                   <span class="img-container">
                     <img src="images/1.png" alt="" />
-                    <span class="tile-title"></span>
-                    <span class="tile-text"
-                      >Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-                      sed do eiusmod tempor incididunt ut labore et dolore magna
-                      aliqua. Ut enim ad minim veniam, quis nostrud exercitation
-                      ullamco laboris nisi ut aliquip ex ea commodo
-                      consequat.</span
-                    >
-                    <span class="button"></span>
                   </span>
+                  <span class="tile-title">Klimatyzacja</span>
+                  <span class="tile-text"
+                    >Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+                    sed do eiusmod tempor incididunt ut labore et dolore magna
+                    aliqua. Ut enim ad minim veniam, quis nostrud exercitation
+                    ullamco laboris nisi ut aliquip ex ea commodo
+                    consequat.</span
+                  >
+                  <span class="button">Więcej</span>
                 </a>
                 <a href="" class="tile">
                   <span class="img-container">
-                    <img src="images/1.png" alt="" />
-                    <span class="tile-title"></span>
-                    <span class="tile-text"
-                      >Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-                      sed do eiusmod tempor incididunt ut labore et dolore magna
-                      aliqua. Ut enim ad minim veniam, quis nostrud exercitation
-                      ullamco laboris nisi ut aliquip ex ea commodo
-                      consequat.</span
-                    >
-                    <span class="button"></span>
+                    <img src="images/2.png" alt="" />
                   </span>
+                  <span class="tile-title">Wentylacja</span>
+                  <span class="tile-text"
+                    >Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+                    sed do eiusmod tempor incididunt ut labore et dolore magna
+                    aliqua. Ut enim ad minim veniam, quis nostrud exercitation
+                    ullamco laboris nisi ut aliquip ex ea commodo
+                    consequat.</span
+                  >
+                  <span class="button">Więcej</span>
                 </a>
                 <a href="" class="tile">
                   <span class="img-container">
-                    <img src="images/1.png" alt="" />
-                    <span class="tile-title"></span>
-                    <span class="tile-text"
-                      >Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-                      sed do eiusmod tempor incididunt ut labore et dolore magna
-                      aliqua. Ut enim ad minim veniam, quis nostrud exercitation
-                      ullamco laboris nisi ut aliquip ex ea commodo
-                      consequat.</span
-                    >
-                    <span class="button"></span>
+                    <img src="images/3.png" alt="" />
                   </span>
+                  <span class="tile-title">Certyfikaty</span>
+                  <span class="tile-text"
+                    >Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+                    sed do eiusmod tempor incididunt ut labore et dolore magna
+                    aliqua. Ut enim ad minim veniam, quis nostrud exercitation
+                    ullamco laboris nisi ut aliquip ex ea commodo
+                    consequat.</span
+                  >
+                  <span class="button">Więcej</span>
                 </a>
                 <a href="" class="tile">
                   <span class="img-container">
-                    <img src="images/1.png" alt="" />
-                    <span class="tile-title"></span>
-                    <span class="tile-text"
-                      >Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-                      sed do eiusmod tempor incididunt ut labore et dolore magna
-                      aliqua. Ut enim ad minim veniam, quis nostrud exercitation
-                      ullamco laboris nisi ut aliquip ex ea commodo
-                      consequat.</span
-                    >
-                    <span class="button"></span>
+                    <img src="images/4.png" alt="" />
                   </span>
+                  <span class="tile-title">Automatyka</span>
+                  <span class="tile-text"
+                    >Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+                    sed do eiusmod tempor incididunt ut labore et dolore magna
+                    aliqua. Ut enim ad minim veniam, quis nostrud exercitation
+                    ullamco laboris nisi ut aliquip ex ea commodo
+                    consequat.</span
+                  >
+                  <span class="button">Więcej</span>
                 </a>
               </div>
             </div>
