--- a/realizacje.html
+++ b/realizacje.html
@@ -16,7 +16,7 @@
       rel="stylesheet"
     />
 
-    <title>Automatyka</title>
+    <title>Realizacje</title>
     <script src="https://kit.fontawesome.com/fd26eeca06.js"></script>
   </head>
 
@@ -78,98 +78,87 @@
         </div>
       </nav>
     </header>
-    <main class="automatyka">
+    <main>
       <div class="hero-img">
         <div class="container">
-          <h3 class="h3">Automatyka</h3>
+          <h3 class="h3">Realizacje</h3>
         </div>
       </div>
-      <div class="gr">
+      <div class="realizations">
         <div class="container">
-          <div class="content">
-            <h4 class="h4">
-              Automatyka
-            </h4>
-            <img src="images/4.png" alt="" class="content-icon" />
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
-              enim ad minim veniam, quis nostrud exercitation ullamco laboris
-              nisi ut aliquip ex ea commodo consequat.
-            </p>
-            <ul>
-              <li>
-                Lorem ipsum dolor sit amet, consectetur adipiscing
-              </li>
-              <li>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-                eiusmod tempor
-              </li>
-              <li>
-                Lorem ipsum dolor sit amet, consect
-              </li>
-              <li>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-                eiusmod
-              </li>
-              <li>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-                eiusmod
-              </li>
-            </ul>
-            <h5>Lorem ipsum dolor sit</h5>
-            <div class="content-bottom">
-              <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-                eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
-                enim ad minim veniam, quis nostrud exercitation ullamco laboris
-                nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor
-                in reprehenderit in voluptate velit esse cillum dolore eu fugiat
-                nulla pariatur. Excepteur sint occaecat cupidatat non proident,
-                sunt in culpa qui officia deserunt mollit anim id est laboru
-              </p>
-              <p>
-                Sed ut perspiciatis unde omnis iste natus error sit voluptatem
-                accusantium doloremque laudantium, totam rem aperiam, eaque ipsa
-                quae ab illo inventore veritatis et quasi architecto beatae
-                vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia
-                voluptas sit aspernatur aut odit aut fugit, sed quia
-                consequuntur magni dolores eos qui ratione voluptatem sequi
-                nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor
-                sit amet, consectetur, adipisci velit, sed quia non numquam eius
-                modi tempora incidunt ut labore et dolore magnam aliquam quaerat
-                voluptatem. Ut enim ad minima veniam, quis nostrum
-                exercitationem ullam corporis suscipit laboriosam, nisi ut
-                aliquid ex ea commodi consequatur? Quis autem vel eum iure
-                reprehenderit qui in ea voluptate velit esse quam nihil
-                molestiae consequatur, vel illum qui dolorem eum fugiat quo
-                voluptas nulla pariatur?Sed ut perspiciatis unde omnis iste
-                natus error sit voluptatem accusantium doloremque laudantium,
-                totam rem aperiam, eaque ipsa quae ab illo inventore veritatis
-                et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim
-                ipsam voluptatem quia voluptas sit aspernatur aut odit aut
-                fugit, sed quia consequuntur magni dolores eos qui ratione
-                voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem
-                ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia
-                non numquam eius modi tempora incidunt ut labore et dolore
-                magnam aliquam quaerat voluptatem. Ut enim ad minima veniam,
-                quis nostrum exercitationem ullam corporis suscipit laboriosam,
-                nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum
-                iure reprehenderit qui in ea voluptate velit esse quam nihil
-                molestiae consequatur, vel illum qui dolorem eum fugiat quo
-                voluptas nulla pariatur?
-              </p>
+          <div class="row">
+            <div class="col-12 col-md-5">
+              <img src="images/obraz.jpg" alt="" class="realizations-img" />
+            </div>
+            <div class="col-12 col-md-7">
+              <h3 class="our-offer-h3">
+                Przykładowa realizacja <span>NAZWA</span>
+              </h3>
+              <div class="content">
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+                  do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                  Ut enim ad minim veniam, quis nostrud exercitation ullamco
+                  laboris nisi ut aliquip ex ea commodo consequat.
+                </p>
+                <ul>
+                  <li>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing
+                  </li>
+                  <li>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+                    do eiusmod tempor
+                  </li>
+                  <li>
+                    Lorem ipsum dolor sit amet, consect
+                  </li>
+                  <li>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+                    do eiusmod
+                  </li>
+                  <li>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+                    do eiusmod
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col">
+              <a href="" class="image-container">
+                <img src="images/obraz.jpg" alt="" />
+                <i class="fas fa-search-plus"></i>
+              </a>
+            </div>
+            <div class="col">
+              <a href="" class="image-container">
+                <img src="images/obraz.jpg" alt="" />
+                <i class="fas fa-search-plus"></i>
+              </a>
+            </div>
+            <div class="col">
+              <a href="" class="image-container">
+                <img src="images/obraz.jpg" alt="" />
+                <i class="fas fa-search-plus"></i>
+              </a>
+            </div>
+            <div class="col">
+              <a href="" class="image-container">
+                <img src="images/obraz.jpg" alt="" />
+                <i class="fas fa-search-plus"></i>
+              </a>
+            </div>
+            <div class="col">
+              <a href="" class="image-container">
+                <img src="images/obraz.jpg" alt="" />
+                <i class="fas fa-search-plus"></i>
+              </a>
             </div>
           </div>
         </div>
-        <img src="images/image.png" alt="" class="gr-img">
       </div>
-      <hr class="subpage-hr">
-      <div class="invite">
-        <div class="container">
-          <div class="invite-text">ZAPRASZAMY DO WSPÓŁPRACY!</div>
-        </div>
-      </div>
+      <hr class="subpage-hr hr-mod" />
       <div class="contact">
         <div class="container">
           <h4 class="h4">
